<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="18dp"
    android:layout_marginTop="30dp">

    <!-- Image Placeholder -->
    <ImageView
        android:id="@+id/image_post"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:src="@drawable/img_placeholder"
        android:scaleType="centerCrop"
        android:background="@color/light_grey"
        android:padding="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="16dp"/>

    <!-- Caption Input -->
    <EditText
        android:id="@+id/editText_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/write_a_caption"
        android:inputType="textMultiLine"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:padding="12dp"
        android:background="@drawable/edittext_bg"
        android:minLines="2"
        android:maxLines="6"
        android:minHeight="50dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/add_post"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_to_post"
            android:textSize="16sp"
            android:layout_marginStart="15dp"
            android:textStyle="bold"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desc"
        android:layout_marginTop="10dp"/>


    <!-- Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:backgroundTint="@color/violet_theme"
            android:textSize="15sp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"/>

        <!-- Post Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonPost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/deep_red"
            android:paddingStart="24dp"
            android:paddingTop="12dp"
            android:paddingEnd="24dp"
            android:paddingBottom="12dp"
            android:text="@string/post"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
