<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="18dp"
    android:id="@+id/main"
    android:layout_margin="18dp"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/add_reels_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/add_reels"
            android:layout_gravity="center_vertical"
            android:backgroundTint="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_reels"
            android:layout_marginStart="15dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonUpload"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:text="@string/upload"
            android:textColor="@color/white"
            android:layout_marginStart="70dp"
            android:background="@color/black"/>

    </LinearLayout>



    <!-- Caption Input -->
    <EditText
        android:id="@+id/editText_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/write_a_caption"
        android:inputType="textMultiLine"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="16dp"
        android:padding="12dp"
        android:background="@drawable/edittext_bg"
        android:minLines="2"
        android:maxLines="6"
        android:minHeight="50dp" />


    <!-- Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:backgroundTint="@color/violet_theme"
            android:textSize="15sp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"/>

        <!-- Post Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonPost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/deep_red"
            android:paddingStart="24dp"
            android:paddingTop="12dp"
            android:paddingEnd="24dp"
            android:paddingBottom="12dp"
            android:text="@string/post"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
