<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <!-- Profile Layout -->
    <LinearLayout
        android:id="@+id/profile_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/dp_image"
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:src="@drawable/img_placeholder"
            android:scaleType="centerCrop"
            android:background="@android:color/transparent"
            android:padding="0dp"
            android:layout_marginBottom="1dp"
            android:contentDescription=""
            tools:ignore="ContentDescription"
            android:layout_marginTop="5dp"
            android:layout_marginStart="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:padding="12dp"
            android:elevation="4dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp">

            <TextView
                android:id="@+id/textViewUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:padding="3dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/username"
                android:layout_marginBottom="3dp"/>

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:padding="3dp"
                android:textColor="@color/black"
                android:text="@string/email"/>

        </LinearLayout>
    </LinearLayout>

    <!-- Divider Line Above Edit Profile Button -->
    <View
        android:id="@+id/divider_above_edit_profile"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_grey"
        android:layout_below="@id/profile_layout"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"/>

    <!-- Edit Profile Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonEditProfile"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:text="@string/edit_profile"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:backgroundTint="@color/black"
        android:textSize="15sp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:layout_alignTop="@id/divider_above_edit_profile"
        android:layout_alignEnd="@id/profile_layout"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"/>

    <!-- Logout Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogout"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:text="@string/log_out"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:backgroundTint="@color/black"
        android:textStyle="bold"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="12dp"
        android:paddingBottom="10dp"
        android:layout_alignTop="@id/divider_above_edit_profile"
        android:layout_alignStart="@id/profile_layout"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"/>

    <!-- Divider Line Below Edit Profile Button -->
    <View
        android:id="@+id/divider_below_edit_profile"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/transparent"
        android:layout_below="@id/buttonEditProfile"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:elevation="0dp"
        android:layout_marginTop="0dp"
        app:tabTextColor="@color/black"
        app:tabMode="fixed"
        app:tabGravity="fill"
        android:layout_below="@id/divider_below_edit_profile"/>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_below="@id/tabLayout"/>

</RelativeLayout>